# telegram-AI

./: .env.example  Dockerfile  README.md  admin_api.py  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
alembic/versions/: 0001_create_telegram_core_tables.py
app/: __init__.py  main.py  models.py
app/api/: admin.py  telegram_webhook.py
app/core/: config.py  logging.py
app/domain/: __init__.py  state_machine.py
app/infrastructure/: __init__.py
app/infrastructure/db/: __init__.py  models.py  session.py
app/infrastructure/redis/: __init__.py  dedupe.py  locks.py
app/infrastructure/repositories/: __init__.py  chat_repository.py  event_repository.py  message_repository.py  mode_repository.py
app/infrastructure/telegram/: __init__.py  client.py
app/services/: __init__.py  ai_service.py  chat_orchestrator.py  handoff_service.py  memory_service.py
src/: models.py  webhook.py
src/orchestration/: chat_orchestrator.py
src/policy/: prompt_policy.py
src/services/: ai_service.py  memory_service.py  ollama_ai_service.py  summary_service.py
tests/: test_admin_api.py  test_handoff_flow.py  test_orchestrator.py  test_state_machine.py  test_webhook.py
